# zpc-template

./: .clang-format  CMakeLists.txt  README.md  main.cu
include/mylib/: foo.cuh
src/: bar.cu
